Fix a small bug when show fullscreen hamburger menu
- The scrollbar will show from nowhere then disapear.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -248,6 +248,7 @@ div.collapse {
 
 // Make the hamburger menu fullscreen
 #bs-navbar-collapse-1 {
+  overflow-y: hidden;
   height: 100vh;
   max-height: none;
   -webkit-transition-duration: 0.7s;
